# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2019-11-05 Michael Truog   <mjtruog at protonmail dot com>

    * Simplify cloudi_cron module

2019-11-04 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_cron date increment

2019-11-03 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_cron so it handles DST adjustments
    * Fix cloudi_service_cron milliseconds adjustment
      by always having a cron expression timer occur
      10 milliseconds after the appropriate datetime
      (to handle any timer variation)

2019-11-02 Michael Truog   <mjtruog at protonmail dot com>

    * Add user and su_path configuration arguments to
      cloudi_service_shell for execution as a specific user
    * Add debug configuration argument to
      cloudi_service_shell and cloudi_service_cron, to be
      consistent with cloudi_service_null

2019-11-01 Michael Truog   <mjtruog at protonmail dot com>

    * Add debug_level configuration argument to
      cloudi_service_shell and cloudi_service_cron

2019-10-31 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_service_cron expressions argument

2019-10-30 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_shell env configuration argument

2019-10-29 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_shell
    * Add cloudi_service_cron

2019-10-25 Michael Truog   <mjtruog at protonmail dot com>

    * Fix CloudI Service API services_add so successfully started
      services are tracked properly when a later service fails to
      successfully start
      (when starting multiple services in a single services_add call)
    * Set the default configuration of the port 6464 HTTP server
      to use a 30 second timeout for HTTP/1 requests

2019-10-24 Michael Truog   <mjtruog at protonmail dot com>

    * Add +pc unicode to vm.args for unicode CloudI logging