@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2019-11-09 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Simplify cloudi_cron module and add documentation
+
 2019-11-05 Michael Truog   <mjtruog at protonmail dot com>
 
     * Simplify cloudi_cron module
